--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - "5432:5432"
   airflow:
     image: apache/airflow:2.7.3-python3.11
+    container_name: airflow
     restart: on-failure
     depends_on:
       - postgres
@@ -41,6 +42,7 @@ services:
 
   dbt:
     image: python:3.11
+    container_name: dbt
     volumes:
       - ./dbt:/dbt
       - ./data:/data
@@ -60,6 +62,7 @@ services:
 
   pgadmin:
     image: dpage/pgadmin4
+    container_name: pgadmin
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
